# msprobe

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  README.md  README_EN.md  build.py  build.sh  hatch_build.py  pyproject.toml  setup.py  torch_npu_url.json
ait_backend/: CMakeLists.txt
ait_backend/ait_logger/: ait_logger.cpp  ait_logger.h
ait_backend/llm/: CMakeLists.txt
ait_backend/llm/dump/: CMakeLists.txt  DumpThreadPool.h  Statistics.h  atb_probe.cpp  atb_probe.h  bin_file.cpp  bin_file.h  binfile.cpp  binfile.h  build.sh  file_registry.h
ait_backend/llm/mindie_torch_dump/: CMakeLists.txt  build.sh  dump_utils.cpp  dump_utils.h
ait_backend/llm/opcheck/: CMakeLists.txt  main.cpp
ait_backend/utils/: const.h  file.cpp  file.h  safety_guard.cpp  safety_guard.h  umask_wrapper.h  utils.cpp  utils.h
ccsrc/: CMakeLists.txt
ccsrc/aclgraph_dump/: aclgraph_dump.cpp
ccsrc/atb_probe/: atb_probe.cpp
ccsrc/atb_probe/utils/: bin_file.cpp  const.h  file.cpp  file.h
ccsrc/nan_check/: CMakeLists.txt  aclnn_common.h  build_nan_test.sh  nan_check.cpp  nan_test.json
ccsrc/nan_check/nan_test/op_host/: nan_test.cpp  nan_test_tiling.h
ccsrc/nan_check/nan_test/op_kernel/: nan_test.cpp  nan_test.h
ccsrc/xor_checksum/: CMakeLists.txt
ccsrc/xor_checksum/cmake/: ascend.cmake  func.cmake
ccsrc/xor_checksum/csrc/: CMakeLists.txt  extension.cpp
ccsrc/xor_checksum/csrc/xor_checksum/: CMakeLists.txt  xor_checksum.asc
cmake/: config.ini  download_opensource.sh  utils.cmake
docs/: conf.py  index.md
docs/en/: config_check_instruct.md  monitor_instruct.md  monitor_v2_instruct.md  msprobe_install_guide.md  release_notes.md  security_statement.md
docs/en/accuracy_checker/: mindspore_accuracy_checker_instruct.md  pytorch_accuracy_checker_instruct.md
docs/en/accuracy_compare/: infer_compare_result.md  mindspore_accuracy_compare_instruct.md  mindspore_visualization_instruct.md  pytorch_accuracy_compare_instruct.md  pytorch_visualization_instruct.md  torchair_compare_instruct.md  trend_visualization_instruct.md
docs/en/dump/: aclgraph_dump_instruct.md  (+11 more)
docs/zh/: mindstudio_vulnerability_handling_procedure.md  monitor_v2_instruct.md  msprobe_install_guide.md  public_ip_address.md  response_anomaly_instruct.md
opensource/: CMakeLists.txt
plugins/fast_tb_kgi/: .gitignore  README.md  fast_tb_kgi-0.0.1-py3-none-any.whl  pyproject.toml
plugins/fast_tb_kgi/backend/: plugin.py  routes.py
plugins/fast_tb_kgi/backend/kgi/api/: kgi_for_tb.py
plugins/fast_tb_kgi/backend/kgi/core/comparealg/: anchor_compare_alg.py  anchor_compare_all_alg.py  compare_alg.py  isolated_nodes_compare_alg.py  mul_anchor_compare_alg.py
plugins/fast_tb_kgi/backend/kgi/core/structs/: __init__.py  node.py
plugins/fast_tb_kgi/backend/kgi/core/utils/: graph_struct_analyze_utils.py  graph_utils.py
plugins/fast_tb_kgi/backend/kgi/sal/computergraph/: computer_edge.py  computer_graph.py  computer_node.py  edge_manager.py  node_manager.py
plugins/fast_tb_kgi/backend/kgi/sal/parser/: aclnns.json  ms_execute_order_parser.py  pt_execute_order_parser.py
plugins/fast_tb_kgi/backend/static/: main.js
plugins/fast_tb_kgi/doc/examples/silu_gelu/: simple_doc.md
plugins/fast_tb_kgi/frontend/: index.html  package.json  vite.config.ts
plugins/fast_tb_kgi/frontend/src/: App.css  App.tsx  colorConfig.ts  main.css  main.tsx  visConfig.ts
plugins/fast_tb_kgi/tests/kgi/core/comparealg/: test_anchor_compare_alg.py  test_anchor_compare_all_alg.py  test_isolated_nodes_compare_alg.py  test_mul_anchor_compare_alg.py
plugins/fast_tb_kgi/tests/kgi/core/utils/: test_graph_struct_analyse_utils.py  test_graph_utils.py
plugins/fast_tb_kgi/tests/kgi/sal/computergraph/: test_computer_edge.py  test_computer_graph.py  test_computer_node.py  test_edge_manager.py  test_node_manager.py
plugins/fast_tb_kgi/tests/kgi/sal/parser/: test_ms_execute_order_parser.py
plugins/tb_graph_ascend/: MANIFEST.in  setup.py
pre-commit/: pyproject.toml
python/msprobe/: __init__.py  config.json  msprobe.py
resource/: dump_data.proto
scripts/run_script/: main_msaccucmp.sh
src/: pytorch_gpu2npu.sh
src/compare/: algorithm_manager.py  algorithm_parameter.py  batch_compare.py  big_dump_data.py  common.py  compare_detail.py  compare_error.py  compare_fusion_op.py  compare_npu_vs_npu.py  compare_pytorch.py  compare_result.py  compare_rule.py  compare_vector.py  const_manager.py  detail.py  detail_writer.py  dump.py  dump_data_conversion.py  dump_data_object.py  dump_data_parser.py  dump_data_pb2.py  dump_parser.py  ffts_parser.py  file_utils.py  format_manager.py  fusion_op.py  fusion_rule_parser.py  hdf5_parser.py  inplace_layer_process.py  log.py  msaccucmp.py  mscmp_advisor.py  multi_convert_process.py  overflow_analyse.py  overflow_detection.py  progress.py  pytorch_dump_data.py  quant_filter.py  range_manager.py  range_mode.py  (+5 more)
src/load_balancing/: setup.py
src/msFmkTransplt/: builtin_rules.json  code_visitor.py  ms_fmk_transplt.py  rule.py  trans_utils.py  transplant.py
src/ms_fmk_transplt/: builtin_rules.json  code_visitor.py  distributed_rule.py  ms_fmk_transplt.py  op_list.json  pytorch_analyse.py  pytorch_analyse.sh  pytorch_gpu2npu.sh  rule.py  scope_visitors.py  trans_utils.py  transfer_to_npu.py  transplant.py  transplant_logger.py
test/: fuzz_run_test.sh  run_st.py  run_test.sh  run_ut.py
test/bandit_check/: bandit_check.sh
test/fuzz_test/: FuzzDefs.h  FuzzMain.cpp
test/ut/ait_testcase/: CMakeLists.txt  generate_coverage.sh  layer_test.json  run_ait_cases.sh
test/ut/ait_testcase/cases/: env_var_guard.h  test_ait_logger.cpp  test_llm_dump_atb_probe.cpp  test_llm_dump_binfile.cpp  test_mtd_dump_utils.cpp  test_utils_file.cpp  test_utils_safety_guard.cpp  test_utils_utils.cpp
test/ut/ait_testcase/common/: common_stub.h  file_state_guard.h  stats_generator.cpp  stats_generator.h  tools.cpp  tools.h
trans/00_conda/: factory_env_backup.yaml  fsdp_py310_env_backup.yaml  mindspeed-rl_backup.yaml  verl_env_backup.yaml  vllm_0.9.2rc1_backup.yaml  vllm_new_backup.yaml  zr_env_backup.yaml
(+1802 files in other folders)
