[project]
name = "mindstudio-probe"
version = "26.0.0"
requires-python = ">=3.8,<3.14"
description = "Ascend MindStudio Probe Utils"
license = "MulanPSL-2.0"
authors = [
    {name = "Ascend Team", email = "pmail_mindstudio@huawei.com"},
]
keywords = ["pytorch", "msprobe", "ascend"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "wheel",
    "einops",
    "numpy>=1.23.0",
    "pandas>=1.3.5",
    "pyyaml",
    "tqdm",
    "openpyxl>=3.0.6",
    "matplotlib",
    "tensorboard>=2.11.2",
    "rich",
    "skl2onnx>=1.14.1",
    "pytz",
    "psutil",
]

[project.scripts]
msprobe = "msprobe.msprobe:main"

[project.urls]
Homepage = "https://gitcode.com/Ascend/MindStudio-Probe"

[dependency-groups]
dev = [
    "pytest>=8.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/msprobe"]

[tool.hatch.build]
artifacts = [
    "python/msprobe/lib/**",
    "python/msprobe/scripts/**",
    "python/msprobe/vendors/**",
    "python/hierarchy_plugin/server/**/*.html",
    "python/hierarchy_plugin/server/**/*.js",
    "python/trend_analyzer/server/**/*.html",
    "python/trend_analyzer/server/**/*.js",
]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.uv]
environments = [
    "sys_platform == 'linux'",
]
