[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "fast-tb-kgi"
version = "0.0.1"
description = "Fast TensorBoard Plugin Kernel Graph Identity"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
license = "BSD-3-Clause"
authors = [
    {name = "Taylor Lab"},
    {name = "Ascend Team", email = "pmail_mindstudio@huawei.com"}
]
maintainers = [
    {name = "Taylor Lab"},
    {name = "Ascend Team", email = "pmail_mindstudio@huawei.com"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "tensorboard>=2.20",
    "networkx>=3.6"
]
keywords = [
    "fast",
    "tensorboard",
    "plugin",
    "kgi"
]

[project.urls]
Homepage = "https://gitcode.com/Ascend/msprobe"
Repository = "https://gitcode.com/Ascend/msprobe"

[project.entry-points."tensorboard_plugins"]
kgi = "backend.plugin:KgiPlugin"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]

[tool.setuptools.package-data]
backend = ["static/**"]
"backend.kgi.sal.parser" = ["aclnns.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]